fix: make exploratory visible

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -1013,7 +1013,6 @@ header.masthead .exploratory {
   z-index: 3;
   min-width: 100vw;
   max-width: 100vw;
-  left: -200vw;
   background-color: white;
   opacity: 1;
   -webkit-animation: all 1s;
